test/negative/t7.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel
  {| function p (x:integer):integer = x |}[@@gospel
                                            {| requires x > 0
    variant x = 0
    ensures x
    ensures x > 2
    ensures x > 1 |}]]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ function p ...
    variant ...
    requires ...
    ensures ...
    ensures ...
    ensures ...
     *)
File "t7.mli", line 13, characters 12-13:
Error: Type mysmatch. Cannot match integer with bool
